Ändrat API-nycklar

--- a/KatalogApi/appsettings.json
+++ b/KatalogApi/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "KatalogApiKey": "SuperHemligt123",
+  "KatalogApiKey": "BYT_UT_MOT_RIKTIG_NYCKEL_I_AZURE",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
