--- a/SOS100-MVC/appsettings.json
+++ b/SOS100-MVC/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "KatalogApiKey": "SuperHemligt123",
+  "KatalogApiKey": "BYT_UT_MOT_RIKTIG_NYCKEL_I_AZURE",
   "KatalogApiBaseUrl": "http://localhost:5017",
   "Logging": {
     "LogLevel": {
