--- a/SOS100-MVC/SOS100-MVC.csproj
+++ b/SOS100-MVC/SOS100-MVC.csproj
@@ -8,4 +8,8 @@
         <UserSecretsId>0b522644-3cca-413f-aafc-d097c3a80f00</UserSecretsId>
     </PropertyGroup>
 
+    <ItemGroup>
+      <_ContentIncludedByDefault Remove="Views\Test\Index.cshtml" />
+    </ItemGroup>
+
 </Project>
