--- a/KatalogApi/appsettings.json
+++ b/KatalogApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=katalog-dev.db"
+  },
   "KatalogApiKey": "BYT_UT_MOT_RIKTIG_NYCKEL_I_AZURE",
   "Logging": {
     "LogLevel": {
