--- a/KatalogApi/appsettings.Development.json
+++ b/KatalogApi/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=katalog-dev.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
