--- a/KatalogApi/appsettings.Development.json
+++ b/KatalogApi/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=katalog-dev.db"
+    "DefaultConnection": "Data Source=./katalog-service-dev.db"
   },
   "Logging": {
     "LogLevel": {
