Login API Database Azure

--- a/SOS100-MVC/appsettings.json
+++ b/SOS100-MVC/appsettings.json
@@ -1,6 +1,8 @@
 {
-  "KatalogApiKey": "BYT_UT_MOT_RIKTIG_NYCKEL_I_AZURE",
+  "UserServiceBaseUrl": "http://localhost:5196",
   "KatalogApiBaseUrl": "http://localhost:5017",
+  "KatalogApiKey": "BYT_UT_MOT_RIKTIG_NYCKEL_I_AZURE",
+  
   "Logging": {
     "LogLevel": {
       "Default": "Information",
