--- a/SOS100-MVC/appsettings.json
+++ b/SOS100-MVC/appsettings.json
@@ -1,6 +1,7 @@
 {
   "KatalogApiKey": "BYT_UT_MOT_RIKTIG_NYCKEL_I_AZURE",
   "KatalogApiBaseUrl": "http://localhost:5017",
+  "UserServiceBaseUrl": "http://localhost:5196",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
